# less-is-more

./: .env  .gitignore  BUILD  Cargo.toml  README.md  WORKSPACE  docker-compose.yml  fly-machines-spec.json  fly_machine.bzl
migrations/: 20241016185237_add_users.sql  20241017231613_add_image_url_to_images.sql  20241018024443_add_jobs_table.sql  20241019194626_add_image_version_to_jobs.sql
src/: app.rs  errors.rs  main.rs  models.rs  thruster_extensions.rs
src/controllers/: images.rs  jobs.rs  mod.rs  sessions.rs  users.rs
src/services/: fly.rs
web/: package-lock.json  package.json  tailwind.config.ts
web/pages/: auth-page.tsx  dashboard-legacy.tsx  dashboard.tsx
