[workspace]
members = [
    ".",
    "fly",
]

[package]
name = "less-is-more"
version = "0.1.0"
edition = "2021"

[dependencies]
usual-macros = { git = "https://github.com/trezm/petelib.git" }
reqwest = { version = "0.12.8", features = ["json"] }
serde = { version = "1.0.210", features = ["serde_derive"] }
serde_json = "1.0.128"
thruster = { version = "1.3.13", features = ["hyper", "hyper_server"] }
# thruster = { version = "1.3.12", features = ["hyper", "hyper_server"] }
thruster-macros = { git = "https://github.com/trezm/petelib.git", features = ["prisma"] }
tokio = { version = "1.38.0", features = ["full"] }
usual = { version = "0.1.2", features = ["tokio-postgres"] }
uuid = { version = "1.0.0", features = ["serde"] }
chrono = { version = "0.4.38", features = ["serde"] }
tokio-postgres = { version = "0.7.12", features = ["with-uuid-1", "with-chrono-0_4"] }
tracing = "0.1.40"
deadpool-postgres = "0.14.0"
argon2 = "0.5.3"
redis = { version = "0.27.4", features = ["aio", "tokio-comp", "uuid"] }
env_logger = "0.11.5"
dotenv = "0.15.0"
rand = { version = "0.8.5", features = ["std", "std_rng"] }
base64 = "0.22.1"
postgres-derive = "0.4.6"
postgres-types = { version = "0.2.8", features = ["derive"] }
fly = { package = "openapi", path = "./fly" }
http = "1.1.0"
tracing-subscriber = "0.3.18"
urlencoding = "2.1.3"
